--- a/health_adminimal/sass/_paragraphs.scss
+++ b/health_adminimal/sass/_paragraphs.scss
@@ -8,6 +8,12 @@ body.adminimal-skin-material {
       display: none;
     }
 
+    &.field-widget-paragraphs-embed > div > .form-item  > label {
+      padding: 5px 11px 4px 11px;
+      margin: 0;
+      background-color: rgb(224, 224, 224);
+    }
+
     // This is terrible, but the only way to target the label above a paragraph add more button.
     > div > div > div {
       &:not(.overflow-fix) {
@@ -63,12 +69,6 @@ body.adminimal-skin-material {
   .field-name-field-publication-files,
   .field-name-field-para-email,
   .field-name-field-para-telephone {
-
-    #field-components-add-more-wrapper label {
-      padding: 5px 11px 4px 11px;
-      margin: 0;
-      background-color: rgb(224, 224, 224);
-    }
 
     tr {
       td {
